# computer-graphics-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/CGApp/: CGApp.hpp  CGAppFactory.hpp  CMakeLists.txt  SimpleCGApp.cpp  SimpleCGApp.hpp
Domain/: CMakeLists.txt
Domain/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
Domain/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp
Domain/Shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
Domain/WindowHandler/: CMakeLists.txt  WindowHandler.cpp  WindowHandler.hpp
Main/: CMakeLists.txt  main copy.cpp  main.cpp
Resources/Shaders/: shader.frag  shader.vert
